tests/fixtures/invalid/min_bytes_set.py
# Cannot call min() with Bytes, Set[int]
x = min(b"hello", {1, 2, 3})
